# py-dwc-viz

./: .buildinfo  .gitignore  README.md  changelog.md  diversity.html  genindex.html  index.html  map.html  objects.inv  py-modindex.html  requirements-dev.txt  search.html  searchindex.js  setup.cfg  setup.py  stats.html  taxon.html
.github/workflows/: build-docs.yml  pypi.yml  tests.yml
_sources/: index.rst.txt  map.rst.txt
_static/: documentation_options.js
docs/: conf.py  diversity.rst  index.rst  stats.rst  taxon.rst
dwcviz/: Species.py
notebooks/: obis_dataset_context.ipynb
pydwcviz/: Species.py  __init__.py  utils.py
pydwcviz/diversity/: __init__.py  diversity.py  test_diversity.py
pydwcviz/map/: __init__.py  map.py
pydwcviz/stats/: __init__.py  stats.py  test_stats.py
pydwcviz/taxon/: __init__.py  taxon.py  test_taxon.py
