# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = pyobis
description = Python package for Darwin-Core Data Analysis.
# author = 
# author_email = 
url = https://github.com/marinebon/py-dwc-viz
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
license-file = LICENSE
project_urls =
    Documentation = https://marinebon.github.io/py-dwc-viz
    Bug Tracker = https://github.com/marinebon/py-dwc-viz
    Source Code = https://github.com/marinebon/py-dwc-viz
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
install_requires =
    requests>2.7
    pandas
python_requires = >=3.7
packages = find:
